# GenomeLens

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CORE_AGENT.md  Dockerfile  LICENSE  NOTICE.md  README.md  __init__.py  _version.py  cli.py  pyproject.toml  上游修改汇总.md  启动GenomeLens.cmd
app/: README.md  (+1 more)
engines/jcvi/: README.md  pyproject.toml  setup.py  上游修改汇总.md
engines/jcvi/packaging/pyinstaller/: jcvi_genomelens.spec
engines/jcvi/packaging/scripts/: build_cython_extensions.py  build_engine.ps1  build_engine.sh  smoke_test_engine.ps1
engines/jcvi/src/jcvi/: _version.py
engines/jcvi/src/jcvi/apps/: base.py
engines/jcvi/src/jcvi/assembly/: chic_fallback.py  hic.py
engines/jcvi/src/jcvi/graphics/: tree.py
engines/jcvi/src/jcvi_genomelens/: __init__.py  _version.py  cli.py  engine_runtime.py  manifest_loader.py  manifest_models.py  mirrored_karyotype.py  probe.py  runtime_profile.py  workflow_contract.py  workflow_dispatcher.py
engines/jcvi/src/jcvi_genomelens/graphics/: local_synteny_renderer.py
engines/jcvi/src/jcvi_genomelens/manifest/: __init__.py  loader.py  models.py
engines/jcvi/src/jcvi_genomelens/runtime/: __init__.py  command_runner.py  engine.py  logging_utils.py  path_utils.py  profile.py  summary_writer.py  task_log.py
engines/jcvi/src/jcvi_genomelens/workflows/: __init__.py  bed_summary.py  catalog_ortholog.py  common.py  contract.py  dispatcher.py  graphics_dotplot.py  graphics_heatmap.py  graphics_histogram.py  graphics_karyotype.py  graphics_karyotype_global.py  graphics_synteny.py  karyotype_support.py  local_synteny.py  local_synteny_multi.py  mcscan_pairwise.py  (+1 more)
engines/jcvi/tests/integration/: test_engine_run.py  test_local_synteny.py
engines/jcvi/tests/unit/: test_karyotype_label_overlap.py  test_local_synteny_blocks.py  test_local_synteny_layout.py  test_local_synteny_renderer.py  test_logging_utils.py  test_manifest_contract.py  test_multi_species_plot_workflows.py  test_pairwise_artifact_reuse.py  test_plot_optimization.py  test_probe_contract.py  test_workflow_dispatcher.py
gui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui/tauri/src-tauri/capabilities/: default.json
gui/tauri/src-tauri/icons/: icon.icns
gui/tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
platform/: README.md  environment.yml  pyproject.toml
platform/packaging/pyinstaller/: genomelens.spec
platform/packaging/scripts/: build_windows.ps1  smoke_test_exe.ps1
platform/src/genomelens/: __init__.py  _version.py  parsers.py  recc_need.py
platform/src/genomelens/analysis/: __init__.py  dispatcher.py  execution_models.py  request_loader.py  request_models.py  request_normalizer.py  request_schema.py
platform/src/genomelens/app/: __init__.py
platform/src/genomelens/artifacts/: __init__.py  archive.py  bundles.py
platform/src/genomelens/cli/: __init__.py  jcvi_subtasks.py  main.py  mcscan_help.py  ui.py
platform/src/genomelens/contracts/: __init__.py  artifacts.py  checks.py  species.py  summaries.py
platform/src/genomelens/core/: __init__.py  constants.py  json_utils.py  mcscan_summary.py  models.py  summary_models.py  synteny_pipeline.py  validators.py
platform/src/genomelens/data/: __init__.py
platform/src/genomelens/engines/: __init__.py
platform/src/genomelens/preprocessing/: __init__.py  annotation.py  input_preparer.py
platform/src/genomelens/services/: __init__.py  layout.py  scoring.py
platform/src/genomelens/toolchain/: __init__.py
platform/src/genomelens/utils/: __init__.py  constants.py  json.py  parsers.py
platform/src/genomelens/validation/: __init__.py  execution_requests.py  files.py  genome_inputs.py
platform/src/genomelens/workflow/: __init__.py  onestop_registry.py  port_system.py  submodule_registry.py
platform/tests/cli/: test_workflow_command.py
platform/tests/integration/: test_cli.py
platform/tests/unit/: test_analysis_architecture.py  test_cli_ui.py  test_config_store.py  test_execution_request_mapping.py  test_json_utils.py  test_local_synteny_aggregate.py  test_log_setup.py  test_mcscan_request_mapping.py  test_orchestrator_routing.py  test_output_layout.py  test_plan_context.py  test_plan_optimizer.py  test_preprocessor.py  test_task_request.py  test_toolchain_installer.py  test_workflow_registry.py
(+679 files in other folders)
