[build-system]
requires = ["setuptools>=68", "wheel", "cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "jcvi-genomelens"
version = "1.0.0-preview-1"
description = "Standalone GenomeLens engine carrying vendored JCVI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "biopython",
  "matplotlib>=3.8",
  "more-itertools",
  "natsort",
  "networkx",
  "numpy",
  "ortools",
  "palettable",
  "scipy",
  "seaborn",
  "gffutils",
  "ete3",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pyinstaller>=6",
  "ruff>=0.6",
  "cython>=3",
]
# 未来 JCVI 能力扩展所需的额外依赖。
# 注意：部分包在 Windows 上没有预构建 wheel，当前环境无法直接安装。
future = [
  "deap",               # assembly.hic, algorithms.ec
  "pyliftover",         # variation.impute, formats.vcf
  "boto3",              # variation.delly, utils.aws
  "pyefd",              # graphics.grabseeds
  # "pyfasta",          # 0.5.2 不支持 Python 3，需替换为 pyfastx 或打补丁
  # "pysam",            # Windows 无官方 wheel/conda 包，需 WSL 或源码编译
  # "pybedtools",       # 依赖 bedtools 与 pysam，Windows 支持差
  # "bx-python",        # 源码编译需要 zlib/samtools 头文件，Windows 复杂
  # "CrossMap",         # 依赖 pysam，即 cmmodule 的宿主包
]

[project.scripts]
jcvi-genomelens = "jcvi_genomelens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
