[package]
name = "genomelens-gui"
version = "0.1.0"
description = "GenomeLens desktop GUI"
authors = ["GenomeLens Developers"]
edition = "2021"

[lib]
name = "genomelens_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
